--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URI=mongodb+srv://senurabawantha_db_user:koOuQbtRbIJcI4sd@bus-traking-api.hxctmjs.mongodb.net/bus-traking-api?retryWrites=true&w=majority&appName=bus-traking-api
 PORT=5000
+GEOCODER_USER_AGENT="NTC-Bus-Tracker/1.0 (senurabawantha@gmail.com)"
+
