--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
+    "lru-cache": "^11.2.2",
     "mongoose": "^8.18.3"
   }
 }
