--- a/.env
+++ b/.env
@@ -1,4 +1,33 @@
-MONGO_URI=mongodb+srv://senurabawantha_db_user:koOuQbtRbIJcI4sd@bus-traking-api.hxctmjs.mongodb.net/bus-traking-api?retryWrites=true&w=majority&appName=bus-traking-api
+# Server
 PORT=5000
-GEOCODER_USER_AGENT="NTC-Bus-Tracker/1.0 (senurabawantha@gmail.com)"
+
+# Primary (cloud) MongoDB connection string.
+# Leave this BLANK to use local Mongo automatically.
+# Example Atlas format:
+# MONGO_URI=mongodb+srv://<user>:<pass>@<cluster>/<db>?retryWrites=true&w=majority
+MONGO_URI="mongodb+srv://senurabawantha_db_user:JFrXIWOiaAtRTVts@bus-traking-api.hxctmjs.mongodb.net/bus-traking-api?retryWrites=true&w=majority&appName=bus-traking-api"
+
+# Local fallback if MONGO_URI is empty
+MONGO_LOCAL_URI=mongodb://127.0.0.1:27017/bus_tracking
+
+# Optional logging level you might use in your app
+LOG_LEVEL=info
+
+
+
+
+
+
+
+
+
+
+
+
+# MONGO_URI=mongodb+srv://YOUR_USER:YOUR_PASSWORD@hxctmjs.mongodb.net/bus-tracking-api?retryWrites=true&w=majority&appName=bus-tracking-api
+
+
+# # MONGO_URI=mongodb+srv://senurabawantha_db_user:JFrXIWOiaAtRTVts@bus-traking-api.hxctmjs.mongodb.net/bus-traking-api?retryWrites=true&w=majority&appName=bus-traking-api
+# PORT=5000
+# GEOCODER_USER_AGENT="NTC-Bus-Tracker/1.0 (senurabawantha@gmail.com)"
 
